--- a/views/list.ejs
+++ b/views/list.ejs
@@ -2,7 +2,7 @@
 <div class="main_div">
 
     <!-- <div class="nav"> -->
-        <span class="greeting">Hello <%= %> </span>
+        <span class="greeting">Hello @<%= username %> </span>
         <!-- <button type="" class="logout">Log out</button> -->
     <!-- </div> -->
 
