--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,7 +9,7 @@
             <label for="username" class="form_label">Enter username</label>
         </div>
         <div class="form_group field">    
-            <input type="password" class="form_field" placeholder="Password" name="password" id="password" />
+            <input type="password" class="form_field" placeholder="Password" name="password" id="password" required />
             <label for="password" class="form_label">Enter password</label>
         </div>
         <br/>
